<resources>
    <string name="app_name">PhotoSplash</string>
    <string name="app_author">by CChevalier, 2016-2018</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- About menu / Toast -->
    <string name="action_about">About</string>
    <string name="about">PhotoSplash\nAndroid Developer nanodegree\nby Udacity\n(c) CChevalier, 2016</string>

    <!-- Connection Status-->
    <string name="status_photos">No photos.\n Please check your network connection.</string>

    <!-- View Activity -->
    <string name="title_activity_view">View Photo</string>

    <!-- Photosplash categories -->
    <string name="category">Category</string>

    <string name="category_favorites">Favorites</string>
    <string name="category_new">New</string>
    <string name="category_featured">Featured</string>
    <string name="category_buildings">Buildings</string>
    <string name="category_food">Food and Drinks</string>
    <string name="category_nature">Nature</string>
    <string name="category_objects">Objects</string>
    <string name="category_people">People</string>
    <string name="category_technology">Technology</string>
    <string name="category_undefined">Undefined category</string>

    <!-- AdMob -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Widget -->
    <string name="title_widget">PhotoSplash Favorites</string>

    <!-- Additional Content Description -->
    <string name="desc_photo_small">View photo</string>
    <string name="desc_photo_view">Zoomable photo</string>
    <string name="desc_fab_info">Get photo information</string>
    <string name="desc_fab_favorite_add">Add photo to favorites</string>
    <string name="desc_fab_favorite_remove">Add photo from favorites</string>


</resources>
