<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category_new"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/category_new" />
        <item
            android:id="@+id/nav_category_featured"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/category_featured" />
        <item
            android:id="@+id/nav_category_favorites"
            android:title="@string/category_favorites" />

            <item
                android:id="@+id/nav_category_buildings"
                android:title="@string/category_buildings" />
            <item
                android:id="@+id/nav_category_food"
                android:title="@string/category_food" />
            <item
                android:id="@+id/nav_category_nature"
                android:title="@string/category_nature" />
            <item
                android:id="@+id/nav_category_objects"
                android:title="@string/category_objects" />
            <item
                android:id="@+id/nav_category_people"
                android:title="@string/category_people" />
            <item
                android:id="@+id/nav_category_technology"
                android:title="@string/category_technology" />

    </group>

    <item android:title="@string/category">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/action_settings" />

        </menu>
    </item>

</menu>
